make final changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
 
     <form class="pokemonForm" id="pokemonForm">
-        <h2>hackémon</h2>
+        <a class="title" href="https://fontmeme.com/pokemon-font/"><img
+                src="https://fontmeme.com/permalink/230512/a73754d787651a3dbe0bd4fb22c36b65.png" alt="pokemon-font"
+                border="0"></a>
         <label class="form__label" for="name">Pokémon Name:</label>
         <input class="form__criteria" type="text" id="name" name="name" required />
         <button id="submit" type="submit">SUBMIT</button>
