added comments for organization

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
 
+    <!-- form -->
     <form class="pokemonForm" id="pokemonForm">
         <a class="title" href="https://fontmeme.com/pokemon-font/"><img
                 src="https://fontmeme.com/permalink/230512/a73754d787651a3dbe0bd4fb22c36b65.png" alt="pokemon-font"
@@ -21,6 +22,7 @@
         <input type="hidden" name="source" value="tutorial" />
     </form>
 
+    <!-- info-list -->
     <div class="pokemon-container">
         <ul class="pokemon-info__list">
 
